syntax = "proto3";

package api.v1;

import "google/protobuf/empty.proto";
import "x/go/status/status.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/v1";

service StatusSetService {
  rpc Exec(StatusSetRequest) returns (StatusSetResponse) {}
}

service StatusRetrieveService {
  rpc Exec(StatusRetrieveRequest) returns (StatusRetrieveResponse) {}
}

service StatusDeleteService {
  rpc Exec(StatusDeleteRequest) returns (google.protobuf.Empty) {}
}

message StatusSetRequest {
  string parent = 1; // Optional parent ontology ID in format "type:key"
  repeated status.PBStatus statuses = 2;
}

message StatusSetResponse {
  repeated status.PBStatus statuses = 1;
}

message StatusRetrieveRequest {
  repeated string keys = 1;
  string search_term = 2;
  int32 offset = 3;
  int32 limit = 4;
  bool include_labels = 5;
  repeated string has_labels = 6;
}

message StatusRetrieveResponse {
  repeated status.PBStatus statuses = 1;
}

message StatusDeleteRequest {
  repeated string keys = 1;
}
